Added content for research and startups pages

--- a/.gitignore
+++ b/.gitignore
@@ -10513,5 +10513,4 @@ node_modules/wrappy/README\.md
 node_modules/wrappy/wrappy\.js
 
 *.pdn
-img/bill.jpeg
-img/banners/Building_Tower_2.JPG
+yeee.html
